<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.vod.main.ui.videodetails.viewmodel.VideoDetailsViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/video_details_padding">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/detailsContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:text="Hello">


                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    app:srcUrl="@{viewModel.videoEntityData.poster_path}"
                    tools:src="@drawable/ic_launcher_background" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/video_details_margin_top_space"
                    android:orientation="horizontal"
                    android:text="Hello">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/video_details_title_txt"
                        android:textColor="@color/video_details_label_txt_color"
                        android:textSize="@dimen/video_details_label_txt_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/video_details_value_margin_start"
                        android:text="@{viewModel.videoEntityData.original_title}"
                        android:textColor="@color/video_details_value_txt_color"
                        android:textSize="@dimen/video_details_value_txt_size"
                        tools:ignore="RtlCompat"
                        tools:text="1:0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/video_details_margin_top_space"
                    android:orientation="horizontal"
                    android:text="Hello">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/video_details_description_txt"
                        android:textColor="@color/video_details_label_txt_color"
                        android:textSize="@dimen/video_details_label_txt_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/video_details_value_margin_start"
                        android:text="@{viewModel.videoEntityData.overview}"
                        android:textColor="@color/video_details_value_txt_color"
                        android:textSize="@dimen/video_details_value_txt_size"
                        tools:ignore="RtlCompat"
                        tools:text="1:0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/video_details_margin_top_space"
                    android:orientation="horizontal"
                    android:text="Hello">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/video_details_release_date_txt"
                        android:textColor="@color/video_details_label_txt_color"
                        android:textSize="@dimen/video_details_label_txt_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/video_details_value_margin_start"
                        android:text="@{viewModel.videoEntityData.release_date}"
                        android:textColor="@color/video_details_value_txt_color"
                        android:textSize="@dimen/video_details_value_txt_size"
                        tools:ignore="RtlCompat"
                        tools:text="1:0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/video_details_margin_top_space"
                    android:orientation="horizontal"
                    android:text="Hello">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/votes_label"
                        android:textColor="@color/video_details_label_txt_color"
                        android:textSize="@dimen/video_details_label_txt_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/video_details_value_margin_start"
                        android:text="@{Integer.toString(viewModel.videoEntityData.vote_count)}"
                        android:textColor="@color/video_details_value_txt_color"
                        android:textSize="@dimen/video_details_value_txt_size"
                        tools:ignore="RtlCompat"
                        tools:text="1:0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/video_details_margin_top_space"
                    android:orientation="horizontal"
                    android:text="Hello">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/video_language_label"
                        android:textColor="@color/video_details_label_txt_color"
                        android:textSize="@dimen/video_details_label_txt_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/video_details_value_margin_start"
                        android:text="@{viewModel.videoEntityData.original_language}"
                        android:textColor="@color/video_details_value_txt_color"
                        android:textSize="@dimen/video_details_value_txt_size"
                        tools:ignore="RtlCompat"
                        tools:text="1:0" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>